# ImGuiCmakeTemplate

./: CMakeLists.txt  README.md
src/: imgui.ini  main.cpp
